# SV-Detector

./: CMakeLists.txt  CMakeLists.txt.bak  LICENSE  a.out  a.py  makeHashTable.py  sm-map.cpp  test-serialize.cpp  test.cpp
Mapping/: CMakeLists.txt
Mapping/include/shared/: reference.h
Mapping/src/: mapping.cpp
build2/: Makefile  a
include/shared/: reference.h
src/: makeIndex.cpp  reference.cpp
test/: CMakeLists.txt  fusion-CMakeLists.txt  htslib  makeIndex  test-index.cpp  test-index.cpp.ori
test/boost/include/: boost
test/boost/lib/: libboost_atomic.so.1.67.0  libboost_chrono.so.1.67.0  libboost_container.so.1.67.0  libboost_context.so.1.67.0  libboost_contract.so.1.67.0  libboost_coroutine.so.1.67.0  libboost_date_time.so.1.67.0  libboost_fiber.so.1.67.0  libboost_filesystem.so.1.67.0  libboost_graph.so.1.67.0  libboost_iostreams.so.1.67.0  libboost_locale.so.1.67.0  libboost_log.so.1.67.0  libboost_log_setup.so.1.67.0  libboost_math_c99.so.1.67.0  libboost_math_c99f.so.1.67.0  libboost_math_c99l.so.1.67.0  libboost_math_tr1.so.1.67.0  libboost_math_tr1f.so.1.67.0  libboost_math_tr1l.so.1.67.0  libboost_numpy37.so.1.67.0  libboost_prg_exec_monitor.so.1.67.0  libboost_program_options.so.1.67.0  libboost_python37.so.1.67.0  libboost_random.so.1.67.0  libboost_regex.so.1.67.0  libboost_serialization.so.1.67.0  libboost_signals.so.1.67.0  libboost_stacktrace_addr2line.so.1.67.0  libboost_stacktrace_basic.so.1.67.0  libboost_stacktrace_noop.so.1.67.0  libboost_system.so.1.67.0  libboost_thread.so.1.67.0  libboost_timer.so.1.67.0  libboost_type_erasure.so.1.67.0  libboost_unit_test_framework.so.1.67.0  libboost_wave.so.1.67.0  libboost_wserialization.so.1.67.0
test/boost/share/: boost-build
test/bulid/: CMakeCache.txt  Makefile  b  b.map  cmake_install.cmake  fusion  libgcc_s.so.1  libhts.so.1.14-3-g9045785  libhts.so.3  mapping  sv-detector  test-index  test.cpp
test/bulid2/: CMakeCache.txt  Makefile  cmake_install.cmake
test/include/shared/: BamReader.h  fusion.h  mapping.h  reference.h
test/src/: BamReader.cpp  fusion.cpp  main.cpp  mapping.cpp  reference.cpp
test/tools/: fhc-merge.py  filter-sv-anno.py  filter-sv.py  filterAnnoted.py  makeAnoPre.py
